add conditional statements to js.

--- a/index.html
+++ b/index.html
@@ -20,24 +20,17 @@
           <label for="name">enter your name right here</label>
           <input id="name" class="form-control" type="text">
         </div>
-        <div class= "form-group">
-          <label for="age">enter your age right here</label>
-          <input id="age" class="form-control" type="text">
-        </div>
-        <div class= "form-group">
-          <label for="food">enter your favorite food</label>
-          <input id="food" class="form-control" type="text">
-        </div>
-      </form>
+
+
       <h4> if you had to choose one of the following animals which would <strong>YOU</strong> choose?</h4>
       <select class="form-control" id="animals">
         <option value="blank"></option>
         <option value="owl">Owl</option>
         <option value="snake">Snake</option>
-        <option value="bird">Bird</option>
         <option value="rat">Rat</option>
       </select>
       <br>
+
       <h4>pick a house</h4>
       <div class="radio">
       <label>
@@ -57,12 +50,12 @@
           Slytherin
         </label>
       </div>
-      <div class="radio">
-        <label>
-          <input type="radio" name="house" value="ravenclaw">
-          Ravenclaw
-        </label>
-      </div>
+
+      <button type="submit" class="btn">Show me which Harry Potter character I am!</button>
+    </form>
+    <div id="output">
+
+     </div>
 
     </div>
   </body>
