add conditional statements to js.

--- a/index.html
+++ b/index.html
@@ -53,9 +53,10 @@
 
       <button type="submit" class="btn">Show me which Harry Potter character I am!</button>
     </form>
+    <br>
     <div id="output">
-
-     </div>
+      <p>Your Harry Potter character is </p>
+    </div>
 
     </div>
   </body>
